fix spacing issues

--- a/src/scss/shared/base.scss
+++ b/src/scss/shared/base.scss
@@ -25,17 +25,13 @@
 
   td,
   th {
-    padding: 0 16px;
+    padding: 6px 16px;
   }
 
   td {
     font-size: 0.875rem;
     height: 48px;
   }
-}
-
-.custom-table-wrapper {
-  overflow-x: auto;
 }
 
 .filter-none {
